test/resources/testcontents/testing/saker/build/tests/tasks/script/InvalidDefaultsFileTest/recurring.build
defaults(
	example.echo
	Input: abc
)
defaults(
	example.echo
	Input: abc
)